# informed-ai

./: .gitignore  Dockerfile  Makefile  geo_schedule.py  main.py  main_dev.py  pyproject.toml
backend/: extract_zip.py  fetchAlerts.py  final_parse.py
backend/app/: config.py  database.py  gptclient.py  util.py
backend/app/core/models/: activity.py  users.py  weather_details.py
backend/app/core/schemas/: user_request.py
backend/app/routers/: router.py  user_query_routes.py  user_routes.py  weather_data_routes.py
backend/app/services/: user_services.py
charts/: prod.values.yaml
charts/informed/: values.template.yaml
frontend/: Dockerfile  package.json
frontend/src/APIs/: index.js
frontend/src/Components/DialogWrapper/: DialogWrapper.js
frontend/src/Config/: Constants.js
frontend/src/store/: ActionTypes.js  store.ts
frontend/src/types/: index.ts
informed/: config.py  db.py  informed.py
informed/agents/chat_agent/: chat_agent.py
informed/agents/query_agent/: query_agent.py  query_runner.py
informed/api/: admin.py  api_types.py  app.py  chat.py  chat_query.py  schema.py  types.py  user_query_routes.py  user_routes.py  weather_request.py
informed/chat/: manager.py
informed/db_models/: __init__.py  chat.py  users.py
informed/helper/: util.py  utils.py
informed/llm/: client.py
informed/logger/: logger.py  types.py
migrations/: env.py
migrations/helper/: utils.py
migrations/versions/: aff80a3ceea8_00_fresh_db.py
migrations/versions/v1/: 7bad98039f76_.py
misc/scripts/: create_migration.py
terraform/: main.tf  terraform.tfvars
(+31 files in other folders)
