[tool.poetry]
name = "informed"
version = "0.1.0"
description = ""
authors = ["rahulrajesh23 <itsrahulrajesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
async-timeout = "^4.0.3"
asyncpg = "^0.29.0"
certifi = "^2024.2.2"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
distro = "^1.9.0"
fastapi = "^0.110.2"
httpx = "^0.27.0"
openai = "^1.23.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
redis = "^5.0.4"
regex = "^2024.4.16"
requests = "^2.31.0"
sqlalchemy = { extras = ["asyncio", "postgresql-psycopg"], version = "^2.0.27" }
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-instrumentation-logging = "^0.46b0"
pydantic-settings = "^2.5.2"
testcontainers = "^4.8.1"
tenacity = "^9.0.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
selfcheckgpt = "^0.1.7"
numpy = "1.26.4"
sentencepiece = "^0.2.0"
pgvector = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
